# Dashboard_MobileRobot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Inc/: Controller.h  LogoBar.qml  Model.h  View.qml  resources.qrc
Src/: Controller.cpp  Model.cpp
